# e3nn-cpp

./: .gitignore  CMakeLists.txt  README.md  e3nn.h
include/math/: _linalg.h  perm.h
src/math/: _linalg.cpp  perm.cpp
tests/math/: test_linag.cpp  test_perm.cpp
